src/parse/snapshots/blis__parse__parser__tests__test_programs__err_parse__missing_semicolon.blis.errors.snap
---
source: src/parse/parser.rs
description: "println(\"Hello, World\")\n"
input_file: test_programs/err_parse/missing_semicolon.blis
---
ParseErrors([
  Syntax(SyntaxError(
    expected: Semicolon,
    actual: Some(LexemeOwned(
      token: Eof,
      text: "",
      line: 2,
    )),
  )),
])
