src/parse/snapshots/blis__parse__parser__tests__test_programs__err_parse__unexpected_character.blis.errors.snap
---
source: src/parse/parser.rs
description: "let x = true || 3;\n"
input_file: test_programs/err_parse/unexpected_character.blis
---
ParseErrors([
  Syntax(SyntaxError(
    expected: Semicolon,
    actual: Some(LexemeOwned(
      token: ErrorUnrecognizedCharacter,
      text: "|",
      line: 1,
    )),
  )),
])
